# diabetes-cassandra-bigdatamodel

./: .gitignore  README.md  pyproject.toml
src/: bronze.py  config.py  silver.py  test_utils.py  utils.py
src/cql_scripts/: bronze_scripts.cql  gold_scripts.cql  silver_scripts.cql
src/gold/: diabetes_by_location.py  diabetes_by_race_healthcondition.py
src/machine_learning/: gnb.py  knn.py  randomforest.py
src/visualizations/: visualize_correlation.py  visualize_diabetes_by_location.py  visualize_diabetes_by_race_healthcondition.py  visualize_ml.py
